syntax = "proto3";

package proto;

option go_package = "github.com/bloxapp/ssv/ibft/proto";

import "github.com/bloxapp/ssv/ibft/proto/msgs.proto";

message State {
    RoundState stage        = 1;
    // lambda is an instance unique identifier, much like a block hash in a blockchain
    bytes lambda            = 2;
    // sequence number is an incremental number for each instance, much like a block number would be in a blockchain
    uint64 seq_number       = 3;
    bytes input_value       = 4;
    uint64 round            = 5;
    uint64 prepared_round   = 6;
    bytes prepared_value    = 7;
    bytes validator_pk      = 8;
}